added dovesiamo page

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -3,7 +3,7 @@
 <html lang="it" class="full">
 <head>
 	<!-- [GENERAL] -->
-    <title>Benvenuti - Bed & Breakfast a Milano</title>
+    <title>Da Canal - Bed & Breakfast a Milano</title>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -68,18 +68,21 @@ if (navigator && navigator.userAgent && (androidLang = navigator.userAgent.match
 	<header>
 		<div>
 
-			<a id="logo" href="index.html">Bed <em class="amp">&</em> Breakfast a Milano</a>
+			<a id="logo" href="index.html">Da Canal - Bed & Breakfast a Milano</a>
 			
 			<nav id="menu" class="index">
 				<span class="toggler"><span class="togglerText">menu</span></span>
 				<ul>
-					<li class="casa2"><a href="it/casa.html"><span>la casa</span></a></li>
-					<li class="camere2"><a href="it/camere.html"><span>le camere</span></a></li>
-					<li class="servizi2"><a href="it/servizi.html"><span>i servizi</span></a></li>
-					<li class="prezzi2"><a href="it/prezzi.html"><span>prezzi</span></a></li>
-					<li class="contatti2"><a href="it/contatti.html"><span>contatti</span></a></li>
-				</ul>
-			</nav>
+					<li class="casa2"><a href="casa.html"><span>la casa</span></a></li>
+					<li class="camere2"><a href="camere.html"><span>le
+								camere</span></a></li>
+					<li class="servizi2"><a href="servizi.html"><span>i
+								servizi</span></a></li>
+					<li class="prezzi2"><a href="prezzi.html"><span>prezzi</span></a></li>
+					<li class="dovesiamo2"><a href="dovesiamo.html"><span>dove
+								siamo</span></a></li>
+					<li class="contatti2"><a href="contatti.html"><span>contatti</span></a></li>
+				</ul>			</nav>
 
 			 <nav id="lang2">
 				<ul>
@@ -101,8 +104,8 @@ if (navigator && navigator.userAgent && (androidLang = navigator.userAgent.match
 		</section>
 		<aside>
 			<div>
-				<p id="txt1">Benvenuto al B<em class="amp">&</em>B</p>
-				<p id="txt2"><span>A Milano.</span></p>
+				<p id="txt1">Da Canal - Bed <em class="amp">&</em>Breakfast a Milano</p>
+				<p id="txt2"><span>tutta un'altra casa.</span></p>
 			</div>
 		</aside>
 	
