--- a/WebContent/it/camere.html
+++ b/WebContent/it/camere.html
@@ -5,8 +5,7 @@
 
 
 <!-- [GENERAL] -->
-<title>Le camere - Bed & Breakfast a Milano</title>
-
+<title>Le camere - Da Canal - Bed & Breakfast a Milano</title>
 <!-- [META TAGS] -->
 <meta charset="utf-8">
 
@@ -51,9 +50,7 @@
 
 	<header>
 		<div>
-			<a id="logo" href="index.html">Bed <em class="amp">&</em>
-				Breakfast a Milano
-			</a>
+			<a id="logo" href="index.html">Da Canal - Bed & Breakfast a Milano</a>
 
 			<nav id="menu" class="camere">
 				<span class="toggler"><span class="togglerText">menu</span></span>
@@ -64,6 +61,8 @@
 					<li class="servizi2"><a href="servizi.html"><span>i
 								servizi</span></a></li>
 					<li class="prezzi2"><a href="prezzi.html"><span>prezzi</span></a></li>
+					<li class="dovesiamo2"><a href="dovesiamo.html"><span>dove
+								siamo</span></a></li>
 					<li class="contatti2"><a href="contatti.html"><span>contatti</span></a></li>
 				</ul>
 			</nav>
@@ -90,22 +89,23 @@
 
 			<p>Le due stanze sono situate su un unico piano e si affacciano
 				sul salone comune pronto ad ospitarvi per la colazione mattutina e
-				offrirvi un dolce ristoro nelle altre ore del giorno.</p>
-			<p>
-				Le ampie stanze, dove antico e moderno si intrecciano, offrono un
-				ambiente luminoso e confortevole. I dettagli scelti per
-				personalizzare ciascuna stanza sono stati pensati per rendere
-				piacevole e rigenerante il vostro soggiorno. <br />Le stanze sono
-				dotate di tv e wifi gratuito.
-			</p>
-
+				offrirvi un dolce ristoro nelle altre ore del giorno. <br>Le ampie
+				camere, dove antico e moderno si intrecciano, offrono un ambiente
+				luminoso e confortevole. I dettagli scelti per personalizzare
+				ciascuna stanza sono stati pensati per rendere piacevole e
+				rigenerante il vostro soggiorno.</p>
+			<p>Entrambe le stanze sono molto ampie, quindi su richiesta sarà
+				possibile aggiungere un terzo letto. Per chi volesse fumare, vi è la
+				possibilità di accedere ad un balconcino esterno dal quale godersi
+				la tranquillità e l'ombra del giardino privato.
+				<br>Tutti gli spazi sono coperti da wifi gratuito.</p>
 			<aside>
 				<ul>
 					<li id="room1"><a href="#" class="opengallery"
-						data-gallery-id="5874"><h3>Camera “Uno”</h3> <img
+						data-gallery-id="5874"><h3>Camera “Duomo”</h3> <img
 							src="../media/img/photos/camera_1.jpg" alt="" /></a></li>
 					<li id="room2"><a href="#" class="opengallery"
-						data-gallery-id="5826"><h3>Camera “Due”</h3> <img
+						data-gallery-id="5826"><h3>Camera “Castello”</h3> <img
 							src="../media/img/photos/camera_2.jpg" alt="" /></a></li>
 				</ul>
 			</aside>
@@ -156,12 +156,15 @@
 					data-milkslide="galleria" data-gallery-id="5883"
 					title="Camera 'Due'"></a>
 			</figure>
-			<p>
-				Gli ospiti dispongono di un salottino con un ampio caminetto e uno
-				spazio per la lettura e l’intrattenimento.<br />Per chi volesse
-				fumare, vi è la possibilità di accedere ad un balconcino esterno dal
-				quale godersi alcuni scorci dei dintorni.
-			</p>
+			<p>Camera “Duomo” (16 mq) Le due ampie finestre che
+				caratterizzano la camera “Duomo” rendono l'ambiente particolarmente
+				luminoso. Il bagno con l'ampia doccia si trova all'interno della
+				stanza</p>
+
+			<p>Camera “Castello” (16 mq) La finestra della camera “Castello”
+				si affaccia sul grazioso giardino interno. Il bagno privato si trova
+				all'esterno, ad uso esclusivo degli ospiti della camera.</p>
+
 
 		</section>
 
