--- a/WebContent/it/casa.html
+++ b/WebContent/it/casa.html
@@ -5,7 +5,7 @@
 
 
 <!-- [GENERAL] -->
-<title>La casa - Bed & Breakfast Milano</title>
+<title>La casa - Da Canal - Bed & Breakfast a Milano</title>
 
 <!-- [META TAGS] -->
 <meta charset="utf-8">
@@ -52,9 +52,7 @@
 
 	<header>
 		<div>
-			<a id="logo" href="index.html">Bed <em class="amp">&</em>
-				Breakfast a Milano
-			</a>
+			<a id="logo" href="index.html">Da Canal - Bed & Breakfast a Milano</a>
 
 			<nav id="menu" class="casa">
 				<span class="toggler"><span class="togglerText">menu</span></span>
@@ -65,6 +63,8 @@
 					<li class="servizi2"><a href="servizi.html"><span>i
 								servizi</span></a></li>
 					<li class="prezzi2"><a href="prezzi.html"><span>prezzi</span></a></li>
+					<li class="dovesiamo2"><a href="dovesiamo.html"><span>dove
+								siamo</span></a></li>
 					<li class="contatti2"><a href="contatti.html"><span>contatti</span></a></li>
 				</ul>
 			</nav>
@@ -89,13 +89,13 @@
 		<section>
 
 			<hgroup>
-				<h1>La casa indipendente, a poche fermate di metropolitana da
-					stazione centrale e Duomo di Milano</h1>
+				<h1>Casa indipendente in zona tranquilla a poche fermate di
+					metropolitana dal Centro Città</h1>
 			</hgroup>
 
-			<p>La casa risale al 1930, successivamente ricostruita dopo i
-				danni subiti dai bombardamenti della seconda Guerra Mondiale che
-				hanno colpito Milano.</p>
+			<p>La casa risale al 1930, ricostruita dopo i danni subiti dai
+				bombardamenti della seconda Guerra Mondiale che hanno colpito
+				Milano.</p>
 
 			<aside>
 				<a href="#" class="opengallery" data-gallery-id="IMGS5902"><img
@@ -124,30 +124,53 @@
 				disposizione degli ospiti, a qualunque ora del giorno, bibite calde
 				e fresche.</p>
 			<p>La dimora è situata nel cuore del quartiere Affori di Milano,
-				antico ducato nella periferia settentrionale della città del quale è
+				antico ducato nella parte settentrionale della città del quale è
 				ancora possibile scorgere tracce medievali e rinascimentali. A pochi
-				passi dal B&B ???? si trova Villa Litta con il suo Parco collinare,
-				antica residenza estiva della nobiltà milanese, oggi sede della
-				Biblioteca Comunale.</p>
-			<p>Le trasformazioni industriali del secolo scorso e lo sviluppo
-				territoriale che ha investito nel tempo il quartiere, hanno portato
-				ad ampliare negli anni i collegamenti sia verso la parte nord
-				dell'hinterland milanese sia verso il centro città. Il B&B ?????
-				oggi sorge a soli 300 mt dalla fermata della Metropolitana Affori
-				Centro (linea3Gialla), in pochi minuti sarà possibile raggiungere il
-				centro della città e ammirare la maestosità del Duomo, passeggiare
-				lungo la Galleria Vittorio Emanuele, raggiungere il Teatro alla
-				Scala e il Castello Sforzesco. Nei paraggi sorge l'Alcatraz, storico
-				locale milanese che ospita concerti ed eventi.</p>
+				passi dal B&B da Canal si trova Villa Litta con il suo Parco
+				collinare, antica residenza estiva della nobiltà milanese, oggi sede
+				della Biblioteca Comunale.</p>
+			<p>Alla tranquillità della zona si aggiunge la comodità di
+				raggiungere il centro città facilmente. Le trasformazioni
+				industriali del secolo scorso e lo sviluppo territoriale che ha
+				investito nel tempo il quartiere hanno portato ad ampliare negli
+				anni i collegamenti sia verso la parte nord dell'hinterland milanese
+				sia verso il centro città. Il B&B da Canal oggi sorge a soli 300 mt
+				dalla fermata della Metropolitana Affori Centro (linea3Gialla), in
+				pochi minuti sarà possibile ammirare la maestosità del Duomo,
+				passeggiare lungo la Galleria Vittorio Emanuele, raggiungere il
+				Teatro alla Scala e il Castello Sforzesco. Per chi non vuole
+				rinunciare all’attività fisica il Parco Nord con i suoi 640 ettari
+				di verde è raggiungibile a piedi con una passeggiata di pochi
+				minuti. Esplorando il Parco Nord si possono trovare oltre 20 km di
+				percorsi facili e adatti a tutti, percorribili a piedi o in
+				bicicletta: alcuni di questi percorsi si addentrano nella provincia
+				di Milano, raggiungendo i comuni di Cinisello e Bresso. Il Polo
+				Fieristico Milano-Rho Pero è facilmente raggiungibile sia con
+				l’autostrada che con la metropolitana.</p>
+
+			<p>Il B&B da Canal è inoltre un ottimo punto di partenza per
+				raggiungere le località principali della Regione Settentrionale dei
+				Laghi. La vicinanza sia alle autostrade A1-A4 che alla Stazione
+				Ferroviaria FNM (Affori e Bovisa) permetterà di ammirare in poco
+				tempo le bellezze di Como e Lecco sul Lago di Como, ma anche il Lago
+				Maggiore e il Lago di Garda. </p>
+
+			<p>E per gli spiriti più giovani amanti
+				della notte? potranno raggiungere facilmente il quartiere Isola con
+				i suoi locali alternativi, la zona “cool” di Porta Nuova, i
+				romantici Navigli e l'Alcatraz, storico locale milanese che ospita
+				concerti ed eventi musicali.</p>
+
 		</section>
 	</article>
 	<footer>
 		<div>
 			<p class="contact">
 				<strong>????? B&B</strong><em> - </em><span>Via Bernardo da
-					Canal, 24 - 20161 Milano (MI) ITALIA</span><br />
-				<span>Email: <a href="mailto:info@????bb.it">info@????bb.it</a></span><em>
-					- </em><span>Cellulare: <a href="tel:+39.347.0652204">+39.347.0652204</a></span>
+					Canal, 24 - 20161 Milano (MI) ITALIA</span><br /> <span>Email: <a
+					href="mailto:info@????bb.it">info@????bb.it</a></span><em> - </em><span>Cellulare:
+					<a href="tel:+39.347.0652204">+39.347.0652204</a>
+				</span>
 			</p>
 			<p class="socials">
 				<strong>Per aggiornamenti, offerte speciali e<br />proposte
