--- a/WebContent/it/dovesiamo.html
+++ b/WebContent/it/dovesiamo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-<title>Contatti - Bed & Breakfast Milano</title>
+<title>Dove siamo - Da Canal - Bed & Breakfast a Milano</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
@@ -39,13 +39,13 @@
   ga('send', 'pageview');
 </script>
 </head>
-<body id="pageContatti" class="it">
+<body id="pageDovesiamo" class="it">
 
 	<header>
 		<div>
 			<a id="logo" href="index.html">Da Canal - Bed & Breakfast a Milano</a>
 
-			<nav id="menu" class="contatti">
+			<nav id="menu" class="dovesiamo">
 				<span class="toggler"><span class="togglerText">menu</span></span>
 				<ul>
 					<li class="casa2"><a href="casa.html"><span>la casa</span></a></li>
@@ -127,8 +127,11 @@
 
 			<section>
 				<aside>
-					<iframe width="100%" src="http://www.youtube.com/embed/XGSy3_Czz8k">
-					</iframe>
+<!-- 					<iframe width="100%" src="http://www.youtube.com/embed/XGSy3_Czz8k"> -->
+<!-- 					</iframe> -->
+					
+					
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/UkBmUJnpfzo" frameborder="0" allowfullscreen></iframe>
 				</aside>
 				<section>
 
