--- a/WebContent/it/gallery.html
+++ b/WebContent/it/gallery.html
@@ -47,6 +47,8 @@
 					<li class="servizi2"><a href="servizi.html"><span>i
 								servizi</span></a></li>
 					<li class="prezzi2"><a href="prezzi.html"><span>prezzi</span></a></li>
+					<li class="dovesiamo2"><a href="dovesiamo.html"><span>dove
+								siamo</span></a></li>
 					<li class="contatti2"><a href="contatti.html"><span>contatti</span></a></li>
 				</ul>
 			</nav>
