--- a/WebContent/it/index.html
+++ b/WebContent/it/index.html
@@ -3,7 +3,7 @@
 <html lang="it" class="full">
 <head>
 <!-- [GENERAL] -->
-<title>Benvenuti - Bed & Breakfast a Milano</title>
+<title>Da Canal - Bed & Breakfast a Milano</title>
 
 <!-- [META TAGS] -->
 <meta charset="utf-8">
@@ -50,9 +50,8 @@
 	<header>
 		<div>
 
-			<a id="logo" href="index.html">Bed <em class="amp">&</em>
-				Breakfast a Milano
-			</a>
+			<a id="logo" href="index.html">Da Canal - Bed & Breakfast a
+				Milano</a>
 
 			<nav id="menu" class="index">
 				<span class="toggler"><span class="togglerText">menu</span></span>
@@ -63,6 +62,8 @@
 					<li class="servizi2"><a href="servizi.html"><span>i
 								servizi</span></a></li>
 					<li class="prezzi2"><a href="prezzi.html"><span>prezzi</span></a></li>
+					<li class="dovesiamo2"><a href="dovesiamo.html"><span>dove
+								siamo</span></a></li>
 					<li class="contatti2"><a href="contatti.html"><span>contatti</span></a></li>
 				</ul>
 			</nav>
@@ -90,10 +91,10 @@
 		<aside>
 			<div>
 				<p id="txt1">
-					Benvenuto al B<em class="amp">&</em>B
+					Da Canal Bed <em class="amp">&</em> Breakfast Milano
 				</p>
 				<p id="txt2">
-					<span>A Milano.</span>
+					<span>tutta un'altra casa</span>
 				</p>
 			</div>
 		</aside>
