--- a/WebContent/it/prezzi.html
+++ b/WebContent/it/prezzi.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-<title>Prezzi - Bed & Breakfast Milano</title>
+<title>Prezzi - Da Canal - Bed & Breakfast a Milano</title>
 <meta charset="utf-8">
 
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
@@ -36,9 +36,8 @@
 <body id="pagePrezzi" class="it">
 	<header>
 		<div>
-			<a id="logo" href="index.html">Bed <em class="amp">&</em>
-				Breakfast a Milano
-			</a>
+			<a id="logo" href="index.html">Da Canal - Bed & Breakfast a
+				Milano</a>
 
 			<nav id="menu" class="prezzi">
 				<span class="toggler"><span class="togglerText">menu</span></span>
@@ -49,6 +48,8 @@
 					<li class="servizi2"><a href="servizi.html"><span>i
 								servizi</span></a></li>
 					<li class="prezzi2"><a href="prezzi.html"><span>prezzi</span></a></li>
+					<li class="dovesiamo2"><a href="dovesiamo.html"><span>dove
+								siamo</span></a></li>
 					<li class="contatti2"><a href="contatti.html"><span>contatti</span></a></li>
 				</ul>
 			</nav>
@@ -75,29 +76,28 @@
 				<h1>Prezzi delle camere</h1>
 			</hgroup>
 
-			<p>Di seguito riportiamo i prezzi delle camere per notte,
-				inclusivi di tasse, servizi standard e prima colazione:</p>
+			<p>I prezzi delle camere sotto riportati si intendono per notte e
+				sono inclusivi di tasse, servizi standard e prima colazione:</p>
 
 			<table>
 				<tbody>
 					<tr id="room1">
-						<th><strong>Camera "Uno"</strong></th>
+						<th><strong>Camera "Duomo"</strong></th>
 						<td><span>60 €</span><em>50 € uso singola</em><em>70 €
 								uso tripla</em></td>
 					</tr>
 					<tr id="room2">
-						<th><strong>Camera "Due"</strong></th>
+						<th><strong>Camera "Castello"</strong></th>
 						<td><span>50 €</span><em>40 € uso singola</em><em>60 €
 								uso tripla</em></td>
 					</tr>
 				</tbody>
 			</table>
 
-			<p>Camera doppia ad uso singolo: sconto del 20% sulla quota
-				prevista. Letto aggiuntivo: aumento di 35€ sul costo della camera.
-				Per soggiorni lunghi sono previsti sconti particolari, da concordare
-				anticipatamente.</p>
-			<p>Tassa di soggiorno: 2,50 € al giorno per persona.</p>
+			<p>Per soggiorni di almeno 3 notti sono previsti sconti da
+				concordare anticipatamente. Letto aggiuntivo: aumento di 15€ sul
+				costo della camera.</p>
+			<p>Tassa di soggiorno: 2 € al giorno per persona.</p>
 
 		</section>
 
@@ -106,7 +106,7 @@
 	<footer>
 		<div>
 			<p class="contact">
-				<strong>????? B&B</strong><em> - </em><span>Via Bernardo da
+				<strong>Da Canal B&B</strong><em> - </em><span>Via Bernardo da
 					Canal, 24 - 20161 Milano (MI) ITALIA</span><br /> <span>Email: <a
 					href="mailto:info@????bb.it">info@????bb.it</a></span><em> - </em><span>Cellulare:
 					<a href="tel:+39.347.0652204">+39.347.0652204</a>
