--- a/WebContent/it/servizi.html
+++ b/WebContent/it/servizi.html
@@ -3,8 +3,7 @@
 <html lang="it">
 <head>
 <!-- [GENERAL] -->
-<title>La casa - Bed & Breakfast Milano</title>
-
+<title>Servizi - Da Canal - Bed & Breakfast a Milano</title>
 
 <!-- [META TAGS] -->
 <meta charset="utf-8">
@@ -48,9 +47,7 @@
 
 	<header>
 		<div>
-			<a id="logo" href="index.html">Bed <em class="amp">&</em>
-				Breakfast a Milano
-			</a>
+			<a id="logo" href="index.html">Da Canal - Bed & Breakfast a Milano</a>
 
 			<nav id="menu" class="servizi">
 				<span class="toggler"><span class="togglerText">menu</span></span>
@@ -61,6 +58,8 @@
 					<li class="servizi2"><a href="servizi.html"><span>i
 								servizi</span></a></li>
 					<li class="prezzi2"><a href="prezzi.html"><span>prezzi</span></a></li>
+					<li class="dovesiamo2"><a href="dovesiamo.html"><span>dove
+								siamo</span></a></li>
 					<li class="contatti2"><a href="contatti.html"><span>contatti</span></a></li>
 				</ul>
 			</nav>
@@ -84,7 +83,7 @@
 		<section>
 
 			<hgroup>
-				<h1>I servizi, curati personalmente in ogni minimo dettaglio</h1>
+				<h1>Per rendere piacevole il vostro soggiorno</h1>
 			</hgroup>
 
 			<aside id="spazi">
@@ -100,43 +99,27 @@
 			</aside>
 
 			<p>
-				<strong>Servizi standard</strong>:
+				<strong>Servizi offerti</strong>:
 			</p>
 			<ul id="standard">
 				<li>pulizia giornaliera delle camere</li>
-				<li>biancheria della casa con cambio ogni 3 giorni, quella da
-					bagno ogni giorno se necessario</li>
-				<li>colazione a buffet dolce e salato, preparata in giardino
-					durante la bella stagione</li>
+				<li>biancheria della casa con cambio ogni 3 giorni, quella da bagno ogni giorno se necessario</li>
+				<li>colazione a buffet, servita in giardino durante la bella stagione. Sarà possibile accogliere richieste personalizzate nel caso di
+esigenze particolari</li>
 				<li>wi-fi gratuito, accessibile in tutte le aree della casa</li>
 				<li>booksharing</li>
+				<li>si parla inglese</li>
+				<li>Parcheggio lungo la strada (gratuito dal venerdì alla domenica; nei
+giorni infrasettimanali 0,80euro all'ora dalle 8 alle 13)</li>
 			</ul>
 			<p>
 				<strong>Su richiesta</strong>:
 			</p>
 			<ul id="extra">
-				<li>taxi da/per l’aeroporto di Villafranca</li>
-				<li>prenotazione eventi, mostre, spettacoli</li>
-				<li>organizzazione gite, visite in città e zone limitrofe, alle
-					case vinicole e alle ville palladiane</li>
-				<li>prenotazione tee-time presso i golf veronesi e del lago di
-					Garda.</li>
-				<li>consigli e prenotazione dei ristoranti.</li>
+				<li>consigli e prenotazione dei ristoranti di Milano</li>
+				<li>informazioni su Milano e i suoi angoli nascosti</li>
+				<li>si accolgono animali di piccola taglia previo accordi con i proprietari</li>
 			</ul>
-			<p>
-				<strong>Tour organizzati</strong>:
-			</p>
-			<ul id="tours">
-				<li>Tour delle cantine</li>
-				<li>Verona cultura ed enogastronomia</li>
-				<li>Verona romantica</li>
-				<li>Verona by night</li>
-			</ul>
-			<p>
-				Realizzati in collaborazione con <a
-					href="http://www.veronawinetours.com">Verona Wine Tours</a>
-			</p>
-
 		</section>
 
 	</article>
