--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -73,15 +73,15 @@ if (navigator && navigator.userAgent && (androidLang = navigator.userAgent.match
 			<nav id="menu" class="index">
 				<span class="toggler"><span class="togglerText">menu</span></span>
 				<ul>
-					<li class="casa2"><a href="casa.html"><span>la casa</span></a></li>
-					<li class="camere2"><a href="camere.html"><span>le
+					<li class="casa2"><a href="it/casa.html"><span>la casa</span></a></li>
+					<li class="camere2"><a href="it/camere.html"><span>le
 								camere</span></a></li>
-					<li class="servizi2"><a href="servizi.html"><span>i
+					<li class="servizi2"><a href="it/servizi.html"><span>i
 								servizi</span></a></li>
-					<li class="prezzi2"><a href="prezzi.html"><span>prezzi</span></a></li>
-					<li class="dovesiamo2"><a href="dovesiamo.html"><span>dove
+					<li class="prezzi2"><a href="it/prezzi.html"><span>prezzi</span></a></li>
+					<li class="dovesiamo2"><a href="it/dovesiamo.html"><span>dove
 								siamo</span></a></li>
-					<li class="contatti2"><a href="contatti.html"><span>contatti</span></a></li>
+					<li class="contatti2"><a href="it/contatti.html"><span>contatti</span></a></li>
 				</ul>			</nav>
 
 			 <nav id="lang2">
