--- a/WebContent/it/dovesiamo.html
+++ b/WebContent/it/dovesiamo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-<title>Contatti - Bed & Breakfast Milano</title>
+<title>Dove siamo - Bed & Breakfast Milano</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
@@ -39,13 +39,13 @@
   ga('send', 'pageview');
 </script>
 </head>
-<body id="pageContatti" class="it">
+<body id="pageDovesiamo" class="it">
 
 	<header>
 		<div>
 			<a id="logo" href="index.html">Da Canal - Bed & Breakfast a Milano</a>
 
-			<nav id="menu" class="contatti">
+			<nav id="menu" class="dovesiamo">
 				<span class="toggler"><span class="togglerText">menu</span></span>
 				<ul>
 					<li class="casa2"><a href="casa.html"><span>la casa</span></a></li>
@@ -78,7 +78,7 @@
 	<article>
 		<section>
 			<hgroup>
-				<h1>Contatti</h1>
+				<h1>Come raggiungerci</h1>
 			</hgroup>
 			<aside>
 
@@ -101,21 +101,94 @@
 				<img id="imgMetro" src="../media/img/modified/metropolitana.jpg"
 					onclick="changeImage()" />
 			</aside>
+			
+					
+				<aside>
+									<p>Guarda il video del percorso a piedi partendo dalla<br>fermata della
+						Metropolitana Affori Centro (Linea M3 Gialla)</p>
+
+					<iframe width="504" height="310" src="https://www.youtube.com/embed/UkBmUJnpfzo" frameborder="0" allowfullscreen></iframe>
+					</iframe>
+				</aside>
+
+			
+			
+			
+			
 			<section>
 
-				<p>?????? si trova a due minuti a piedi dalla fermata della
-					Metropolitana Affori Centro (Linea Gialla)</p>
-				<p>Potete contattarci ai seguenti indirizzi:</p>
-				<ul>
-					<li><span>Indirizzo:</span><strong><a
-							href="https://www.google.it/maps/place/Via+Privata+Bernardo+da+Canal,+24,+20161+Milano/@45.5141936,9.1710628,17z/data=!3m1!4b1!4m2!3m1!1s0x4786c0eb7f4ac60d:0x48789106df250089">Via
-								Bernardo da Canal, 24<br />20161 Milano (MI) - ITALIA</strong></a></li>
-					<li><span>Email:</span><strong><a
-							href="mailto:info@?????.it">info@????.it</a></strong></li>
-					<li><span>Cellulare:</span><strong><a
-							href="tel:+39.347.0652204">+39.347.0652204</a></strong></li>
+				<p>Siamo a tre minuti a piedi dalla fermata della Metropolitana Affori Centro (Linea M3 Gialla), in via Bernardo Da Canal 24.</p>
+	<p><b>Come raggiungerci in aereo:</b><br>
+Dagli aeroporti di Milano Linate, Milano Malpensa e Orio al Serio ogni
+30 minuti partono autobus ”shuttle” con capolinea alla Stazione
+Centrale di Milano. Da qui con con la metropolitana Linea3gialla
+(direzione Comasina) in 5 fermate sarai ad Affori Centro.<br>
+Alternative allo “Shuttle”:<br>
+da aeroporto Malpensa hai altre due possibilià:<br>
+<ol>
+<li>
+treno Malpensa express fino alla Stazione Cadorna FNM, quindi
+metropolitana linea1Rossa fino a “Duomo” e infine linea3Gialla in
+direzione Comasina</li>
+<li>treno Malpensa express fino alla Stazione Bovisa FNM, quindi treno
+linee S2 e S4 del servizio ferroviario suburbano e dalla linea
+regionale per Asso di Trenord (fermata Stazione FNM Affori)
+</li>
+</ol>
+da aeroporto Linate: autobus 73 fino al capolinea “San Babila” e poi
+(sempre che non si preferisca passeggiare lungo il corso Vittorio
+Emanuele!), metropolitana linea1Rossa fino a “Duomo” e infine
+linea3Gialla in direzione Comasina fermata “Affori Centro”
 
-				</ul>
+Come raggiungerci in Treno:
+
+- da stazione Centrale Milano FS: metropolitana linea3Gialla fermata
+“Affori Centro” (5 fermate, direzione Comasina)
+
+- da stazione Porta Garibaldi ci sono due possibilità
+
+metropolitana linea2Verde fino a “Centrale FS” (2 fermate, direzione
+Cologno) e poi linea3Gialla fermata “Affori Centro” (5 fermate,
+direzione Comasina)
+
+autobus n° 70 (fermata in Via Farini – Via Ferrari, direzione
+Biancamano – Cim. Bruzzano) per 10 fermate e scendi alla fermata di
+Via P. Rossi – Via Armellini (200mt a piedi dal B&B da Canal)
+
+- da stazione FNM Cadorna ci sono due possibilità
+
+metropolitana linea1Rossa fino a “Duomo” (3 fermate, direzione Sesto)
+e poi linea3Gialla fermata “Affori Centro” (9 fermate, direzione
+Comasina)
+
+linee S2 e S4 del servizio ferroviario suburbano e dalla linea
+regionale per Asso di Trenord fermata “Stazione FNM Affori”
+
+- da stazione Rogoredo FS: metropolitana linea3Gialla (direzione
+Comasina) per 17 fermate fino a “Affori Centro”
+
+Come raggiungerci in Auto:
+Siamo al di fuori dell’Area C, la zona a traffico limitato (ZTL)
+corrispondente alla Cerchia dei Bastioni (circonvallazione interna)
+per la quale è previsto un ticket di ingresso.
+
+- da Venezia: imbocca l’autostrada A4 direzione Milano, superata la
+barriera di Milano est e prosegui sino all’uscita di Cormano.
+
+- da Genova: percorri l’autostrada A7 direzione Milano, giunto alla
+barriera di Milano ovest prosegui in direzione Tangenziale ovest –
+Torino, arrivato al bivio segui la direzione Venezia sino all’uscita
+di Cormano.
+
+- da Bologna: risalendo l’autostrada A1 direzione Milano arrivi alla
+barriera di Milano sud, prosegui in Tangenziale est direzione Venezia,
+superata l’uscita di Cascina Gobba imbocca sulla destra la Tangenziale
+A52 direzione Torino – Como. Oltrepassato il casello immettersi sulla
+destra sempre in direzione Torino e prosegui sino all’uscita Cormano.
+
+- da Aeroporto Milano “Malpensa”: prendi la A8 con direzione Milano e
+successivamente la A4 direzione Venezia, uscendo allo svincolo di
+Cormano.</p>
 			</section>
 
 			<div id="gwrap">
@@ -125,17 +198,6 @@
 				href="https://www.google.it/maps/place/Via+Privata+Bernardo+da+Canal,+24,+20161+Milano/@45.5141936,9.1710628,17z/data=!3m1!4b1!4m2!3m1!1s0x4786c0eb7f4ac60d:0x48789106df250089">Guarda
 				la cartina dettagliata su Google Maps</a>
 
-			<section>
-				<aside>
-					<iframe width="100%" src="http://www.youtube.com/embed/XGSy3_Czz8k">
-					</iframe>
-				</aside>
-				<section>
-
-					<p>Guarda il video del percorso partendo dalla fermata della
-						Metropolitana Affori Centro (Linea Gialla)</p>
-				</section>
-			</section>
 
 		</section>
 
