logo names and poiners

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -104,7 +104,7 @@ if (navigator && navigator.userAgent && (androidLang = navigator.userAgent.match
 		</section>
 		<aside>
 			<div>
-				<p id="txt1">Da Canal - Bed <em class="amp">&</em>Breakfast a Milano</p>
+				<p id="txt1">Da Canal Bed&amp;Breakfast Milano</p>
 				<p id="txt2"><span>tutta un'altra casa.</span></p>
 			</div>
 		</aside>
