--- a/WebContent/it/index.html
+++ b/WebContent/it/index.html
@@ -91,7 +91,7 @@
 		<aside>
 			<div>
 				<p id="txt1">
-					Da Canal Bed <em class="amp">&</em> Breakfast Milano
+					Da Canal Bed&amp;Breakfast Milano
 				</p>
 				<p id="txt2">
 					<span>tutta un'altra casa</span>
