--- a/WebContent/it/prezzi.html
+++ b/WebContent/it/prezzi.html
@@ -104,26 +104,22 @@
 		</section>
 
 	</article>
-
 	<footer>
-		<div>
-			<p class="contact">
-				<strong>Da Canal B&B</strong><em> - </em><span>Via Bernardo da
+		<div><p class="contact">
+				<strong>Da Canal B&amp;B</strong><em> - </em><span>Via Bernardo da
 					Canal, 24 - 20161 Milano (MI) ITALIA</span><br /> <span>Email: <a
-					href="mailto:info@????bb.it">info@????bb.it</a></span><em> - </em><span>Cellulare:
+					href="mailto:info@dacanalbnb.com">info@dacanalbnb.com</a></span><em> - </em><span>Cellulare:
 					<a href="tel:+39.347.0652204">+39.347.0652204</a>
 				</span>
 			</p>
 			<p class="socials">
-				<strong>Per aggiornamenti, offerte speciali e<br />proposte
-					last-minute seguici su:
-				</strong> <a href="http://www.facebook.com/pages/??" class="facebook">Facebook</a>
-				<a href="https://twitter.com/#!/RelaisAbbazia" class="twitter">Twitter</a>
-				<a href="http://www.tripadvisor.it/Hotel_Review???.html"
-					class="tripadvisor">Tripadvisor</a>
+				<a href="https://www.facebook.com/pages/Da-Canal-Bed-Breakfast/627093367418165" class="facebook">Facebook</a>
+				<a href="https://twitter.com/DaCanalBnB" class="twitter">Twitter</a>
+				<a href="https://plus.google.com/u/0/111037845761365067591" class="googleplus"></a>
 			</p>
 		</div>
 	</footer>
+
 
 </body>
 </html>
