--- a/WebContent/it/camere.html
+++ b/WebContent/it/camere.html
@@ -95,7 +95,7 @@
 				luminoso e confortevole. I dettagli scelti per personalizzare
 				ciascuna stanza sono stati pensati per rendere piacevole e
 				rigenerante il vostro soggiorno.</p>
-			<p>Entrambe le stanze sono molto ampie, quindi su richiesta sarà
+			<p>Entrambe le stanze sono molto ampie, su richiesta sarà quindi
 				possibile aggiungere un terzo letto. Per chi volesse fumare, vi è la
 				possibilità di accedere ad un balconcino esterno dal quale godersi
 				la tranquillità e l'ombra del giardino privato.
@@ -157,16 +157,14 @@
 					data-milkslide="galleria" data-gallery-id="5883"
 					title="Camera 'Due'"></a>
 			</figure>
-			<p>Camera “Duomo” (16 mq) Le due ampie finestre che
+			<p>Camera “Duomo” (19 mq) Le due ampie finestre che
 				caratterizzano la camera “Duomo” rendono l'ambiente particolarmente
 				luminoso. Il bagno con l'ampia doccia si trova all'interno della
 				stanza</p>
 
-			<p>Camera “Castello” (16 mq) La finestra della camera “Castello”
+			<p>Camera “Castello” (14 mq bagno escluso) La finestra della camera “Castello”
 				si affaccia sul grazioso giardino interno. Il bagno privato si trova
 				all'esterno, ad uso esclusivo degli ospiti della camera.</p>
-
-
 		</section>
 
 	</article>
