--- a/WebContent/it/casa.html
+++ b/WebContent/it/casa.html
@@ -140,13 +140,13 @@
 				dalla fermata della Metropolitana Affori Centro (linea3Gialla), in
 				pochi minuti sarà possibile ammirare la maestosità del Duomo,
 				passeggiare lungo la Galleria Vittorio Emanuele, raggiungere il
-				Teatro alla Scala e il Castello Sforzesco. Per chi non vuole
+				Teatro alla Scala e il Castello Sforzesco. <br>Per chi non vuole
 				rinunciare all’attività fisica il Parco Nord con i suoi 640 ettari
 				di verde è raggiungibile a piedi con una passeggiata di pochi
 				minuti. Esplorando il Parco Nord si possono trovare oltre 20 km di
 				percorsi facili e adatti a tutti, percorribili a piedi o in
 				bicicletta: alcuni di questi percorsi si addentrano nella provincia
-				di Milano, raggiungendo i comuni di Cinisello e Bresso. Il Polo
+				di Milano, raggiungendo i comuni di Cinisello e Bresso.<br>Il Polo
 				Fieristico Milano-Rho Pero è facilmente raggiungibile sia con
 				l’autostrada che con la metropolitana.</p>
 
