--- a/WebContent/it/prezzi.html
+++ b/WebContent/it/prezzi.html
@@ -78,8 +78,7 @@
 				<h1>Prezzi delle camere</h1>
 			</hgroup>
 
-			<p>I prezzi delle camere sotto riportati si intendono per notte e
-				sono inclusivi di tasse, servizi standard e prima colazione:</p>
+			<p>I prezzi delle camere sotto riportati si intendono per notte con prima colazione:</p>
 
 			<table>
 				<tbody>
@@ -99,7 +98,7 @@
 			<p>Per soggiorni di almeno 3 notti sono previsti sconti da
 				concordare anticipatamente. Letto aggiuntivo: aumento di 15€ sul
 				costo della camera.</p>
-			<p>Tassa di soggiorno: 2 € al giorno per persona.</p>
+			<p>Tassa di soggiorno: 2 € al giorno per persona non compresi nel prezzo.</p>
 
 		</section>
 
