--- a/WebContent/it/servizi.html
+++ b/WebContent/it/servizi.html
@@ -111,7 +111,7 @@ esigenze particolari</li>
 				<li>wi-fi gratuito, accessibile in tutte le aree della casa</li>
 				<li>booksharing</li>
 				<li>si parla inglese</li>
-				<li>Parcheggio lungo la strada (gratuito dal venerdì alla domenica; nei
+				<li>parcheggio lungo la strada (gratuito dal venerdì alla domenica; nei
 giorni infrasettimanali 0,80euro all'ora dalle 8 alle 13)</li>
 			</ul>
 			<p>
